# mandelbrot_gpu

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: app.rs  app_state.rs  fractal_app.rs  fv_render_callback.rs  fv_renderer.rs  fv_renderer_resource.rs  lib.rs  main.rs  mandelbrot.wgsl  uniforms.rs  user_settings.rs
