[package]
name = "mandelbrot_gpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bitflags = "2.9.2"
bytemuck = "1.23.2"
eframe = { version = "0.33.3", features = ["wgpu"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
env_logger = "0.11.9"
log = "0.4.27"
measure_time = "0.9.0"
pollster = "0.4.0"
wgpu = { version = "27.0.1", features = ["webgpu"] }
mimalloc = "0.1.48"

[profile.release]
lto = true
codegen-units = 1